--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy Presentation
+name: Deploy Docs to Pages
 
 on:
   push:
@@ -22,26 +22,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up R
-        uses: r-lib/actions/setup-r@v2
+      - name: Configure Pages
+        uses: actions/configure-pages@v5
 
-      - name: Set up Pandoc
-        uses: r-lib/actions/setup-pandoc@v2
-
-      - name: Install R packages
-        uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          extra-packages: rmarkdown
-          cache-version: 1
-
-      - name: Render ioslides presentation
-        run: |
-          Rscript -e "rmarkdown::render('presentation/ai_eval_presentation.Rmd', output_format = 'ioslides_presentation', output_file = 'index.html', output_dir = 'site')"
-
-      - name: Upload artifact
+      - name: Upload docs artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: site
+          path: docs
 
   deploy:
     needs: build
@@ -53,4 +40,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-
